$Id$                       -*-text-*-


**** 1.10 [unreleased]

Fix rt.cpan.org #120748

	Net::DNS::Resolver::MSWin32 critical issue
	Thanks to Dmytro Zagashev for his valuable assistence during
	the investigation which exposed five distinct issues.


**** 1.09 March 24, 2017

Fix rt.cpan.org #120542

	Fails tests when no "." in @INC

Feature rt.cpan.org #75357

	Add mechanism to encode/decode EDNS option octet strings


**** 1.08 February 20, 2017

Fix rt.cpan.org #120208

	Unable to install 1.07 in local::lib environment

Feature rt.cpan.org #119679

	Net::DNS::Nameserver: UpdateHandler for responding to UPDATE packets

Feature rt.cpan.org #75357

	Net::DNS::Nameserver: optionmask (similar to headermask) added
	to allow user to set EDNS options in reply packet

Discontinue support for pre-5.6 perl

	Remove pre-5.6 workarounds and outdated language features


**** 1.07 December 29, 2016

Fix rt.cpan.org #118598/#108908

	Serious Makefile.PL issues
	"make install" now suppressed if pre-1.01 version detected

Fix rt.cpan.org #115558

	Net::DNS::Nameserver does not allow EDNS replies

Fix rt.cpan.org #114917

	Net::DNS::ZoneFile fails to parse mixed case mnemonics

Fix rt.cpan.org #114876

	Use of uninitialized value in lc at MSWin32.pm line 77

Fix rt.cpan.org #114819

	Net::DNS fails to compile with taint checks enabled


**** 1.06 May 27, 2016

Fix rt.cpan.org #114918

	Net::DNS::ZoneFile fails when unnamed RR follows $ORIGIN

Fix rt.cpan.org #114351

	Case sensitive compression breaks resolver->nameservers()

Fix rt.cpan.org #113579

	Net::DNS::Resolver dies on scoped IPv6 nameserver address

Fix rt.cpan.org #113020

	Resolve::Recurse Hangs

Fix rt.cpan.org #112860

	improperly terminated AXFR at t/08-IPv4.t line 446.


**** 1.05 March 7, 2016

Fix rt.cpan.org #111559

	1.04: TSIG not working anymore (TSIG.pm)

Fix rt.cpan.org #108908

	Installing recent version gets shadowed by old version.
	Warnings added to Makefile.PL and t/00-version.t.
